--- a/style1.css
+++ b/style1.css
@@ -1,4 +1,12 @@
 h1 {
-  color: red;
+  color: white;
   text-align: center;
+}
+
+p, ol, h2 {
+	color: white;
+}
+
+body {
+  background-color: rgb(20,20,20);
 }
