--- a/style1.css
+++ b/style1.css
@@ -8,5 +8,10 @@ p, ol, h2 {
 }
 
 body {
-  background-color: rgb(20,20,20);
+  background-color: rgb(0,0,0);
+}
+
+canvas {
+  margin-left: auto;
+  margin-right: auto;
 }
