--- a/style1.css
+++ b/style1.css
@@ -11,7 +11,12 @@ body {
   background-color: rgb(0,0,0);
 }
 
+#canvas-container {
+   width: 100%;
+   text-align:center;
+}
+
 canvas {
-  margin-left: auto;
-  margin-right: auto;
+   display: inline;
+   margin: auto; 
 }
